working on artism project

--- a/projects/artism.html
+++ b/projects/artism.html
@@ -18,7 +18,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>DESIGN DIARY | WEI CHENG</title>
+	<title>ARTISM | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
@@ -35,55 +35,80 @@
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 
-	<div class="parallax-small parallax-designdiary">
+	<div class="parallax-small parallax-artism">
 		<article class="intro">
-			<h1>DESIGN DIARY</h1>
-			<p>UX Design</p>
+			<h1>Artism</h1>
+			<p>UI/UX Design</p>
 		</article>
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
 			<div class="col-two">
-				<img src="design_diary/logo.png" alt="" class="img-col-one">
+				<img src="artism/artism.png" alt="" class="img-col-two">
 			</div>
 			<div class="col-two">
 			<h5>Overview</h5>
-				<p>This is a medium publication includes 10 design diaries. Each post define, evaluate, and redesign a design of mobile application, website, or one thing in everyday life. <br><br>I applied methods taught in "Understanding And Serving User" course at UT Austin to each design diary.
+				<p>Artism is an educational technology provided for Autism children to learn about the social interaction meaning and emotions through social stories and art therapy. I worked as a team of two people, including design process included observation, interview, research, ideate, prototype, and design.
 				</p>
+			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-four">
+				<h5>Role</h5>
+				<p>UX researcher, UX designer, UI designer</p>
+			</div>
+			<div class="col-four">
+				<h5>Team</h5>
+				<p>Wei Cheng, Yanbin Hao</p>
+			</div>
+			<div class="col-four">
+				<h5>Tools</h5>
+				<p>Paper Prototyping, Balsamiq, Photoshop, Sketch, InVision
+				</p>
+			</div>
+			<div class="col-four">
+				<h5>Methods</h5>
+				<p>Interview, Observation, Wireframing
+				</p>
+			</div>
+		</div>
+		<div class="row-project row-project-color">
+			<div class="col-one">
+				<h5>Process</h5>
+				<p>
+					We applied the design thinking methodology as our process, but we changed a bit on the discover phase into <b>observe</b> and <b>research</b> because this project is based on the goal to create an educational technology for children and we want to open for other opportunities based on observing children in the real world.
+				</p>
+				<img src="artism/process.svg" alt="process" class="img-col-one">				
 			</div>
 		</div>
 		<div class="row-project">
 			<div class="col-one">
-				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">VISIT MEDIUM PUBLICATION</div></a>
+				<h5>Discover</h5>
+				<b>Observation</b>
+				<p>
+					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. I opened several games in different categories on the computers and wait for children to interactive with them. Including storybooks, math, and art game. It turns out that preschool children (3-5 years) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT.
+				</p>
 			</div>
 		</div>
+		<div class="row-full">
+			<img src="artism/observe-0.jpg" alt="observe-0" class="img-col-three-close">
+			<img src="artism/observe-1.jpg" alt="observe-1" class="img-col-three-close">					
+			<img src="artism/observe-2.jpg" alt="observe-2" class="img-col-three-close">
+		</div>
+		<hr>
 		<div class="row-project">
-			<div class="col-three">
-				<h5>Tools</h5>
+			<div class="col-one">
+				<b>Interview</b>
 				<p>
-					Sketch<br>
-					Photoshop<br>
-					sketches
+					We interviewed the mother of the little girl about the 
 				</p>
 			</div>
-			<div class="col-three">
-				<h5>Methods</h5>
-				<p>
-					User Center Design<br>
-					UX Evaluation<br>
-					Literature Review
-				</p>
-			</div>
-			<div class="col-three">
-				<h5>Time</h5>
-				<p>3 Months</p>
-			</div>
-		</div>
-		<div class="row-project row-project-color">
-			<img src="design_diary/designdiary1.png" alt="" class="img-col-one">
-		</div>
+			<div class="col-two">
+				<img src="artism/interview-1.jpg" alt="interview-1" class="img-col-two"></div>
+			<div class="col-two">
+				<img src="artism/interview-2.jpg" alt="interview-2" class="img-col-two"></div>
+		</div>		
 
 		<a href="krtco.html">
 			<div class="seemore">
