--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -24,7 +24,6 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="../index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
-		<span class="drawer_btn_nav"><a href="../weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,7 +31,6 @@
 
 	<header>
 		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
@@ -52,7 +50,6 @@
 					The website is developed for 2016 Coorporate Image Filming Competition of Kaoshiung Rapid Transit Coorperation for contestants to know information and register for the filming competition.
 				</p>
 			</div>
-
 			<div class="col-two">
 				<img src="web_krtco/krtco.png" alt="" class="img-col-two">
 			</div>
@@ -70,14 +67,14 @@
 			</div>
 
 			<div class="col-three">
-				<h5>Length</h5>
+				<h5>Time</h5>
 				<p>6 months</p>
 			</div>
 		</div>
 		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
 				<h5>Development Process</h5>
-				This project is collaborated with Kaoshiung Rapid Transit Cooperation and used System Analysis and Design method to develop.
+				<p>This project is collaborated with Kaoshiung Rapid Transit Cooperation and used System Analysis and Design method to develop.</p>
 				<img src="web_krtco/krtco4.png" alt="" class="img-col-one">
 			</div>
 		</div>
@@ -118,10 +115,16 @@
 				In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design apporach to redesign it.
 			</div>
 		</div>
+		<div class="row-project">
+			<div class="col-one">
+				<a target="_blank" href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">
+				<div class="btn-visit">LIVE DEMO</div></a>		
+			</div>
+		</div>
 		<a href="nsysuhero.html">
 			<div class="seemore">
 				<div class="col-three">
-					<h6 class="hcenter">NEXT PROJRCT ></h6>
+					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
 					<h5 class="hcenter">NSYSU HERO</h5>
@@ -138,7 +141,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
 	<!-- </footer> -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
