--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -24,7 +24,6 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="../index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
-		<span class="drawer_btn_nav"><a href="../weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,7 +31,6 @@
 
 	<header>
 		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
@@ -109,7 +107,7 @@
 		<a href="designdiary.html">
 			<div class="seemore">
 				<div class="col-three">
-					<h6 class="hcenter">NEXT PROJRCT ></h6>
+					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
 					<h5 class="hcenter">DESIGN DIARY</h5>
@@ -126,7 +124,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
