--- a/art.html
+++ b/art.html
@@ -25,7 +25,6 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="art.html" class="light">ART</a></span>
-		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -33,11 +32,10 @@
 
 	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav light">ART</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav">WORK</span></a>
 	</header>
-	<div class="parallax-small parallax-art-1">
+	<div class="parallax-art parallax-art-1">
 		<article class="intro">
 			<h1>Art</h1>
 			<p>
@@ -46,7 +44,6 @@
 			</p> 
 		</article>
 	</div>
-
 <div class="wrapper">
 	<div class="toolbar mb2 mt2">
 	  <button class="btn fil-cat selectedClass" data-rel="all">All</button>
@@ -117,7 +114,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="js/loader.js"></script>
