--- a/index.html
+++ b/index.html
@@ -25,51 +25,33 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="art.html">ART</a></span>
-		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
-	<header>
+	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav">ART</span></a>
 		<a href="#wrapper" class="a_nav"><span class="btn_nav">WORK</span></a>
 	</header>
 	<div class="parallax-100 parallax-index-1">
-		<article class="intro">
-			<h1>Hi! I'm Wei Cheng</h1>
-			<p>
-				A graduate student studying at iSchool<br>at University of Texas at Austin.<br>
-				I have 3+ years frontend develop experience,<br>
-				now I'm focusing on<br>
-				<b>User Experience Design</b>.<br>
-			</p><br>
-			learn more about Wei:<br>
-			<a href="#wrapper">
-				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
-			</a>
-		</article>
+	<article class="intro">
+		<img src="img/logo.png" alt="logo" class="logo-mid">
+		<h1>Wei Cheng</h1>
+		<p>
+			<b>UI/UX Designer</b><br>A graduate student studying at iSchool<br>at University of Texas at Austin.<br>
+		</p><br>
+		learn more about Wei:<br>
+		<a href="#wrapper">
+			<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
+		</a>
+	</article>
 	</div>
 <div class="wrapper" id="wrapper">
-	<article class="wrapper-index">
-	<div class="row-index">
+	<article>
 		<h2>WORK</h2>
-	    <a href="projects/nsysuhero.html">
-		   	<div class="project-small">
-		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-up" data-aos-once="true">
-		    	<h3>NSYSU HERO</h3>
-		    	<h4>Game UI Design</h4>
-		    </div>
-	    </a>
-	    <a href="projects/krtco.html">
-		    <div class="project-small">
-		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
-		    	<h3>KRTCO Competition Website</h3>
-		    	<h4>Web UI Design & Develop</h4>
-		    </div>
-		</a>
+		<div class="row-index">
 		<a href="projects/designdiary.html">
 		    <div class="project-small">
 		    	<img class="project-size" src="projects/design_diary/designdiary.png" alt="" data-aos="fade-down" data-aos-once="true">
@@ -77,36 +59,64 @@
 		    	<h4>UX design</h4>
 		    </div>
 		</a>
-	</div>
-	<div class="row-index">
+<!-- 	    <a href="projects/artism.html">
+		    <div class="project-small">
+		    	<img class="project-size" src="projects/artism/artism.png" alt="" data-aos="fade-down" data-aos-once="true">
+		    	<h3>Artism</h3>
+		    	<h4>UX reserach and design</h4>
+		    </div>
+		</a> -->
+	    <a href="projects/krtco.html">
+		    <div class="project-small">
+		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
+		    	<h3>KRTCO Website</h3>
+		    	<h4>Web UI Design & Develop</h4>
+		    </div>
+		</a>
+		</div>	
+		<div class="row-index">	
+	    <a href="projects/nsysuhero.html">
+		   	<div class="project-small">
+		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-down" data-aos-once="true">
+		    	<h3>NSYSU HERO</h3>
+		    	<h4>Game UI Design</h4>
+		    </div>
+	    </a>
+
+		</div>
+	<div class="row-trait row-project-color">
 		<h2>ABOUT WEI</h2>
-		<p>I have 3+ years frontend develop experience,  I am now focusing UI/UX design. Familiar with app development, web frontend development, UI/UX design.</p>
-		<div class="traits" data-aos="flip-left">
+		<p>I have 3+ years frontend develop experience, I am positive and energetic, like to accept challenges and I am familiar with app development, web frontend development, UI/UX design.</p>
+		<div class="traits" data-aos="flip-left" data-aos-once="true">
 			<img src="svg/light.svg" class="svg-index"/><br>
 			<h3>Creative</h3>
 			<p>I like to try different design to create products that are interesting but useful. Check out my <a href="art.html">ART</a>!</p>
 		</div>
-		<div class="traits" data-aos="flip-left" data-aos-delay="500">
+		<div class="traits" data-aos="flip-left" data-aos-delay="500" data-aos-once="true">
 			<img src="svg/love.svg" class="svg-index"/><br>
 			<h3>Empathetic</h3>
 			<p>Being a UX designer, it is important to listen to users and understand their needs. Check out <a href="weicheng_resume.pdf">what I've done</a>!</p>
 		</div>
-		<div class="traits" data-aos="flip-left" data-aos-delay="1000">
+		<div class="traits" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
 			<img src="svg/gear.svg" class="svg-index"/><br>
 			<h3>Problem Solver</h3>
 			<p>I like to take challenge and solve problems that are related to people's life. Visit <a href="projects/designdiary.html">Design Diary</a> too see more.</p>
 		</div>
+		<div class="row-project">
+			<div class="col-one">
+				<a href="weicheng_resume.pdf"><div class="btn-visit">download resume</div></a>
+			</div>
+		</div>
 	</div>
 	</article>
+</div>
 	<footer>
 		<span>Contact Wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
 	</footer>
-	
-	<div id="overlay" onclick="closeProject()"></div>
 </div>
 	<script src="js/loader.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
