update design diary

--- a/index.html
+++ b/index.html
@@ -49,42 +49,42 @@
 	</article>
 	</div>
 <div class="wrapper" id="wrapper">
-	<article>
+	<div class="section-trait">
 		<h2>WORK</h2>
 		<div class="row-index">
-		<a href="projects/designdiary.html">
-		    <div class="project-small">
-		    	<img class="project-size" src="projects/design_diary/designdiary.png" alt="" data-aos="fade-down" data-aos-once="true">
-		    	<h3>Design Diary</h3>
-		    	<h4>UX design</h4>
-		    </div>
-		</a>
-<!-- 	    <a href="projects/artism.html">
-		    <div class="project-small">
-		    	<img class="project-size" src="projects/artism/artism.png" alt="" data-aos="fade-down" data-aos-once="true">
-		    	<h3>Artism</h3>
-		    	<h4>UX reserach and design</h4>
-		    </div>
-		</a> -->
-	    <a href="projects/krtco.html">
-		    <div class="project-small">
-		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
-		    	<h3>KRTCO Website</h3>
-		    	<h4>Web UI Design & Develop</h4>
-		    </div>
-		</a>
-		</div>	
-		<div class="row-index">	
-	    <a href="projects/nsysuhero.html">
-		   	<div class="project-small">
-		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-down" data-aos-once="true">
-		    	<h3>NSYSU HERO</h3>
-		    	<h4>Game UI Design</h4>
-		    </div>
-	    </a>
-
+			<a href="projects/designdiary.html">
+			    <div class="project-small">
+			    	<img class="project-size" src="projects/design_diary/designdiary.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>Design Diary</h3>
+			    	<h4>UX Design</h4>
+			    </div>
+			</a>
+		    <a href="projects/nsysuhero.html">
+			   	<div class="project-small">
+			    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>NSYSU HERO</h3>
+			    	<h4>Game UI Design</h4>
+			    </div>
+		    </a>
 		</div>
-	<div class="row-trait row-project-color">
+		<div class="row-index">	
+<!-- 		    <a href="projects/artism.html">
+			    <div class="project-small">
+			    	<img class="project-size" src="projects/artism/artism.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>Artism</h3>
+			    	<h4>UX Reserach and Design</h4>
+			    </div>
+			</a> -->
+		    <a href="projects/krtco.html">
+			    <div class="project-small">
+			    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>KRTCO Website</h3>
+			    	<h4>Web UI Design & Develop</h4>
+			    </div>
+			</a>
+		</div>
+	</div>
+	<div class="section-trait row-project-color">
 		<h2>ABOUT WEI</h2>
 		<p>I have 3+ years frontend develop experience, I am positive and energetic, like to accept challenges and I am familiar with app development, web frontend development, UI/UX design.</p>
 		<div class="traits" data-aos="flip-left" data-aos-once="true">
@@ -95,7 +95,7 @@
 		<div class="traits" data-aos="flip-left" data-aos-delay="500" data-aos-once="true">
 			<img src="svg/love.svg" class="svg-index"/><br>
 			<h3>Empathetic</h3>
-			<p>Being a UX designer, it is important to listen to users and understand their needs. Check out <a href="weicheng_resume.pdf">what I've done</a>!</p>
+			<p>Being a UX designer, it is important to listen to users and understand their needs.<br>Check out <a href="weicheng_resume.pdf" target="_blank">what I've done</a>!</p>
 		</div>
 		<div class="traits" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
 			<img src="svg/gear.svg" class="svg-index"/><br>
