--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -43,32 +43,21 @@
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
-		<div class="row-project">
-			<div class="col-two">
-				<img src="design_diary/logo.png" alt="" class="img-col-one">
-			</div>
-			<div class="col-two">
+		<div class="row-project" data-aos="fade-down" data-aos-once="true">
+			<div class="col-one">
 			<h5>Overview</h5>
-				<p>This is a medium publication includes 10 design diaries. Each post define, evaluate, and redesign a design of mobile application, website, or one thing in everyday life. <br><br>I applied methods taught in "Understanding And Serving User" course at UT Austin to each design diary.
+				<p>Design Diary is a Medium publication includes 10 design diaries. Each post is an observational diary of user interactions with any information environment. I define a design problem, evaluate, and redesign it. The topic includes mobile application, website, or things in everyday life. The goal is practice user-centered design thinking and practice design tool skills.
 				</p>
 			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-one">
-				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">VISIT MEDIUM PUBLICATION</div></a>
-			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-three">
+			<div class="col-three"><br>
 				<h5>Tools</h5>
 				<p>
 					Sketch<br>
 					Photoshop<br>
-					sketches
+					paper sketches
 				</p>
 			</div>
-			<div class="col-three">
+			<div class="col-three"><br>
 				<h5>Methods</h5>
 				<p>
 					User Center Design<br>
@@ -76,13 +65,91 @@
 					Literature Review
 				</p>
 			</div>
-			<div class="col-three">
+			<div class="col-three"><br>
 				<h5>Time</h5>
 				<p>3 Months</p>
 			</div>
+			<div class="col-one">
+				<img src="design_diary/ddsvg.svg" alt=""class="img-col-one">
+			</div>
+			<div class="col-one">				
+				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
+				<div class="btn-visit">READ FULL DESIGN DIARY</div></a>
+			</div>
+		</div>		
+		<div class="row-project row-project-color" data-aos="fade-down" data-aos-once="true">
+			<div class="col-one">	
+				<h5>Why Design Diary?</h5>
+			</div>
+			<div class="col-one">
+				<div class="quote"><i>Design is not just what it looks like and feels like.<br>Design is how it works. -- Steve Jobs</i></div>
+				<p>
+					Design skill is an important skill for a UX/UI designer like me. And I think there are several skills in the area of design and need to be practice. Writing design diaries require observing things and designs in daily life, which made me more aware of each design elements in things. In addition, after detecting and defining problems, I have chances to give suggestions, redesign in each post using creative and professional ways. I can also practice using different methods to solve problems.
+				</p>				
+			</div>
+			<hr>
+			<div class="col-two">
+				<img src="design_diary/medium.svg" alt="medium" class="img-col-two">
+			</div>
+			<div class="col-two">
+				<p>I choose Medium as the platform to post my design diaries because it provides me a place to expand my network and have potential opportunities to discuss with other designers. Feedbacks are important elements in design thinking process as well. Reading other’s feedbacks helps me to improve and as motivations to create more high-quality design diaries.</p>
+			</div>
 		</div>
+		
+		<div class="row-project" data-aos="fade-down" data-aos-once="true">
+			<div class="col-one">
+				<h5>How did I write it?</h5>
+			<p>
+				Each entry covers the context of occurrence, the nature of the problem from the user’s perspective, an analytical/theoretical framing of the experience, and a clear recommendation for re-design that would improve the experience.
+			</p>
+			<div class="tab dd-process-1"><img src="design_diary/process-1.svg" alt="process-1" class="img-tab"></div>
+			
+			<div class="tab"><img src="design_diary/process-2.svg" alt="process-2" class="img-tab dd-process-2"></div>
+			
+			<div class="tab"><img src="design_diary/process-3.svg" alt="process-3" class="img-tab dd-process-3"></div>
+
+			<div class="tab-content">
+				<img src="design_diary/p1.jpg" class="img-tab-content">
+				Mostly, I observed designs of websites, mobile applications, and things that I often use by myself in daily life.<br>I also asked other people’s opinions and challenges of using things in their experience and observation.<br>Sometimes I just pick a environment and observed the using behavior of other people.<br>
+			</div>
+			</div>
+		</div>
+
 		<div class="row-project row-project-color">
-			<img src="design_diary/designdiary1.png" alt="" class="img-col-one">
+			<div class="col-one">
+				<h5>What's in Design Diary?</h5>
+			</div>
+			<div class="col-three" data-aos="flip-left" data-aos-once="true">
+				<img src="design_diary/websites.svg" alt="websites" class="img-col-three"><b>3 Websites</b><br>I selected problems that I faced in using websites. I wrote about design methods and try to use evaluation method to evaluate and improve, including 
+					<ul>
+						<li>design indicators</li>
+						<li>design consistency</li>
+						<li>usability evaluation.</li>
+					</ul>
+			</div>
+			<div class="col-three" data-aos="flip-left" data-aos-once="true" data-aos-delay="500">
+				<img src="design_diary/apps.svg" alt="apps" class="img-col-three"><b>3 Mobile Apps</b><br>Mobile applications are very common. However, there are still some apps don’t start from  user-centered design. I discussed mobile applications
+					<ul>
+						<li>started from user’s goal</li>
+						<li>mapping and feedback</li>
+						<li>visibility of system status</li>
+					</ul>
+			</div>
+			<div class="col-three" data-aos="flip-left" data-aos-once="true" data-aos-delay="1000">
+				<img src="design_diary/everyday.svg" alt=""class="img-col-three"><b>4 Everyday Things</b><br>I explored different factors related to design in everyday things, including
+					<ul>
+						<li>the signifier in design</li>
+						<li>UX and ergonomics</li>
+						<li>colors in design</li>
+					</ul>
+			</div>
+		</div>
+			
+		<div class="row-project">
+			<div class="col-one">
+				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
+				<div class="btn-visit">READ FULL DESIGN DIARY</div></a>
+			</div>
 		</div>
 
 		<a href="krtco.html">
