--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 		<div class="row-project">
 			<div class="col-one">
-				<a href="weicheng_resume.pdf"><div class="btn-visit">download resume</div></a>
+				<a href="weicheng_resume.pdf"><div class="btn-visit">Download Resume</div></a>
 			</div>
 		</div>
 	</div>
