--- a/projects/artism.html
+++ b/projects/artism.html
@@ -83,32 +83,59 @@
 			</div>
 		</div>
 		<div class="row-project">
+			<img src="artism/process-1.svg" alt="process-1" class="img-col-one">
 			<div class="col-one">
-				<h5>Discover</h5>
-				<b>Observation</b>
+				<h5>Observation</h5>
 				<p>
 					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. I opened several games in different categories on the computers and wait for children to interactive with them. Including storybooks, math, and art game. It turns out that preschool children (3-5 years) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT.
 				</p>
-			</div>
-		</div>
-		<div class="row-full">
 			<img src="artism/observe-0.jpg" alt="observe-0" class="img-col-three-close">
 			<img src="artism/observe-1.jpg" alt="observe-1" class="img-col-three-close">					
 			<img src="artism/observe-2.jpg" alt="observe-2" class="img-col-three-close">
-		</div>
-		<hr>
-		<div class="row-project">
+			</div>
 			<div class="col-one">
-				<b>Interview</b>
+				<h5>Interview</h5>
 				<p>
 					We interviewed the mother of the little girl about the 
 				</p>
-			</div>
+			</div>			
 			<div class="col-two">
 				<img src="artism/interview-1.jpg" alt="interview-1" class="img-col-two"></div>
 			<div class="col-two">
 				<img src="artism/interview-2.jpg" alt="interview-2" class="img-col-two"></div>
-		</div>		
+		</div>	
+
+		<div class="row-project">
+			<div class="col-one">
+				<img src="artism/process-2.svg" alt="process-2" class="img-col-one">
+				<h5>Ideate</h5>
+				paper sketch<br>
+				bullet points
+				<h5>User Scenario</h5>
+				user flow<br>
+				environment
+			</div>
+		</div>
+
+		<div class="row-project">
+			<div class="col-one">
+				<img src="artism/process-3.svg" alt="process-3" class="img-col-one">
+				<h5>Wireframe</h5>
+				paper sketch<br>
+				bullet points
+				<h5>Mockups</h5>
+				user flow<br>
+				environment
+				<h5>Evaluation</h5>
+				in progress<br>			
+			</div>
+		</div>
+
+		<div class="row-project">
+			<div class="col-one">
+				<h5>Reflection</h5>		
+			</div>
+		</div>
 
 		<a href="krtco.html">
 			<div class="seemore">
