--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-one">				
 				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">READ FULL DESIGN DIARY</div></a>
+				<div class="btn-visit">Read Design Diary</div></a>
 			</div>
 		</div>		
 		<div class="row-project row-project-color" data-aos="fade-down" data-aos-once="true">
@@ -88,10 +88,8 @@
 				</p>				
 			</div>
 			<hr>
-			<div class="col-two">
-				<img src="design_diary/medium.svg" alt="medium" class="img-col-two">
-			</div>
-			<div class="col-two">
+			<div class="col-one">
+				<img src="design_diary/medium.svg" alt="medium" class="img-small-logo">
 				<p>I choose Medium as the platform to post my design diaries because it provides me a place to expand my network and have potential opportunities to discuss with other designers. Feedbacks are important elements in design thinking process as well. Reading other’s feedbacks helps me to improve and as motivations to create more high-quality design diaries.</p>
 			</div>
 		</div>
@@ -110,7 +108,7 @@
 
 			<div class="tab-content">
 				<img src="design_diary/p1.jpg" class="img-tab-content">
-				Mostly, I observed designs of websites, mobile applications, and things that I often use by myself in daily life.<br>I also asked other people’s opinions and challenges of using things in their experience and observation.<br>Sometimes I just pick a environment and observed the using behavior of other people.<br>
+				Mostly, I observed designs of websites, mobile applications, and things that I often use by myself in daily life. I also asked other people’s opinions and challenges of using things in their experience and observation. Sometimes I just pick a environment and observed the using behavior of other people.
 			</div>
 			</div>
 		</div>
@@ -147,12 +145,16 @@
 			
 		<div class="row-project">
 			<div class="col-one">
+				<h5>Reflection</h5>
+				<p>				
+				I enjoy doing design diary a lot. I found out it easy to criticize on one design, but it is difficult to reason it through a user-center lease and describe the problem in an analytical way. I would made update versions of each design diary and I will keep noticing and observing good and bad designs in life, then in the future I would update more posts in this project.					
+				</p>
 				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">READ FULL DESIGN DIARY</div></a>
+				<div class="btn-visit">Read Design Diary</div></a>
 			</div>
 		</div>
 
-		<a href="krtco.html">
+		<a href="artism.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
