--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -37,8 +37,8 @@
 
 	<div class="parallax-small parallax-krtco">
 		<article class="intro">
-			<h1>KRTCO Website</h1>
-			<p>UI Design & Develop</p>
+			<h1 class="white">KRTCO Website</h1>
+			<p class="white">UI Design & Develop</p>
 		</article>
 	</div>
 
@@ -53,9 +53,7 @@
 			<div class="col-two">
 				<img src="web_krtco/krtco.png" alt="" class="img-col-two">
 			</div>
-		</div>
-		
-		<div class="row-project" data-aos="slide-up" data-aos-once="true" data-aos-offset="200">
+
 			<div class="col-three">
 			<h5>Role</h5>
 			<p>frontend UI design<br>UI development</p>
@@ -71,54 +69,106 @@
 				<p>6 months</p>
 			</div>
 		</div>
+
 		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
-				<h5>Development Process</h5>
-				<p>This project is collaborated with Kaoshiung Rapid Transit Cooperation and used System Analysis and Design method to develop.</p>
-				<img src="web_krtco/krtco4.png" alt="" class="img-col-one">
+				<h5>Background</h5>
+				<img src="web_krtco/krtco-logo.jpg" alt="krtco-logo" class="img-tab-content">
+				<p>Kaohsiung Rapid Transportation Corporation is a company that manages rapid transit system in Kaohsiung city, Taiwan. They held a competition for their corporate image video since 2013. People can team up, shoot short advertisement film and compete to win the corporate image video.</p>
 			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-two">
-				<b>1 -- System Planning and Analysis Phase</b><br>
-				Kaoshiung Rapid Transit Cooperation hired visual designer to determined the visual elements, and the project manager have listed out the requirements in advance, then they held meeting with development teams to discussed the business requirements.<br><br>
-			</div>
-			<div class="col-two">
-				<b>2 -- System Design Phase</b><br>
-				In this step, I utalized the materials the company gave me and made wireframe of the web layout, and I cooporated with databse managers to discuss about the structure of frontend and backend.<br><br>
-			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-two">
-				<b>3 -- System Implementation and Operation</b><br>
-				I developed the frontend code and collaborated with the backend developers to complete the system. Later on we executed testing and then deploy the website.<br><br>
-			</div>
-			<div class="col-two">
-				<b>4 -- System Maintenance</b><br>
-				I collected feedbacks from the users and evaluate, then made adjustments to some of the UI.
+
+			<div class="col-one">
+				<p>In 2016, the product manager cooperated with students from National Sun Yat-sen University — 2 students from business management department to plan for the promoting campaigns, and 4 students from information management department to build the website and voting system. For the website in 2016, the product manager wanted to improve several features compare to the previous year. I acted as the frontend designer and developer in this project.
+				</p>
 			</div>
 		</div>		
-		<div class="row-project row-project-color">
+
+		<div class="row-project" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
-				<h5>User Interfaces</h5>
-				<img src="web_krtco/krtco1.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
-				<h6>01 - Home Page</h6>
-				<img src="web_krtco/krtco2.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
-				<h6>02 - Latest News</h6>
-				<img src="web_krtco/krtco3.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
-				<h6>03 - Viewing Video</h6>
+				<h5>Development Process</h5>
+				<p>This project used System Analysis and Design method to develop.</p>
+				<img src="web_krtco/process.svg" alt="" class="img-col-one">
 			</div>
-		</div>
-		<div class="row-project row-project-color-2" data-aos="slide-up" data-aos-once="true" data-aos-offset="0">
+			<div class="col-one">
+				<div class="col-two">
+					<b>1 -- System Planning and Analysis Phase</b><br>
+					Kaoshiung Rapid Transit Cooperation hired visual designer to determined the visual elements, and the project manager have listed out the requirements in advance, then they held meeting with development teams to discussed the business requirements.<br><br>
+				</div>
+				<div class="col-two">
+					<b>2 -- System Design Phase</b><br>
+					In this step, I utalized the materials the company gave me and made wireframe of the web layout, and I cooporated with databse managers to discuss about the structure of frontend and backend.<br><br>
+				</div>
+			</div>
+			<div class="col-one">
+				<div class="col-two">
+					<b>3 -- System Implementation and Operation</b><br>
+					I developed the frontend code and collaborated with the backend developers to complete the system. Later on we executed testing and then deploy the website.<br><br>
+				</div>
+				<div class="col-two">
+					<b>4 -- System Maintenance</b><br>
+					I collected feedbacks from the users and evaluate, then made adjustments to some of the UI.
+				</div>
+			</div>
+		</div>		
+			
+			<div class="row-full row-project-color">
+				<div class="col-one"><h5>User Interfaces</h5></div>
+				<div class="col-gif"><img src="web_krtco/01.gif" alt="" class="img-col-two"></div>
+				<div class="col-three">
+					<h6>1 - Home Page</h6>				
+					This page shows the main visual posters of this competition, 4 latest news and the official trailer of the competition. It gives user the first overview of this website.
+				</div>
+			</div>
+
+			<div class="row-full row-project-color">	
+				<div class="col-gif">
+					<img src="web_krtco/02.gif" alt="" class="img-col-two">
+				</div>				
+				<div class="col-three">
+					<h6>2 - Latest News</h6>
+					This page listed out all the news that posted by the project team of this competition, showing the posted date and the number of people viewing each news.
+				</div>			
+			</div>
+
+			<div class="row-full row-project-color">	
+				<div class="col-gif">
+					<img src="web_krtco/03.png" alt="" class="img-col-two">
+				</div>
+				<div class="col-three">
+					<h6>3 - Introduction</h6>
+					This page introduces the origin, the link to past years official websites, and the full introduction of the competition in the year 2016.
+				</div>
+			</div>
+
+			<div class="row-full row-project-color">	
+				<div class="col-gif">
+					<img src="web_krtco/04.gif" alt="" class="img-col-two">
+				</div>				
+				<div class="col-three">
+					<h6>4 - Competition Information</h6>
+					This is the main information about the competition. Includes the dates, registration information, video upload instructions, scoring rubrics, judges introduction, and prize information.
+				</div>			
+			</div>
+
+			<div class="row-full row-project-color">
+				<div class="col-gif">
+					<img src="web_krtco/05.gif" alt="" class="img-col-two">
+				</div>	
+				<div class="col-three">
+					<h6>5 - Voting / Viewing Video</h6>
+					During the voting stage, this page provide as the voting system for people to vote for their favorite short film. After the voting, it listed out all the films that participated in this competition.
+				</div>
+			</div>
+		<div class="row-project row-project-color-2">
 			<div class="col-one">
 				<h5>Conclusion</h5>
-				In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design apporach to redesign it.
+				In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design approach to redesign it.
 			</div>
 		</div>
 		<div class="row-project">
 			<div class="col-one">
 				<a target="_blank" href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">
-				<div class="btn-visit">LIVE DEMO</div></a>		
+				<div class="btn-visit">Live Demo</div></a>		
 			</div>
 		</div>
 		<a href="nsysuhero.html">
