--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -45,23 +45,13 @@
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
 			<div class="col-two">
-			<h5>Background</h5>
-				<p>This Unity 2-Dimentional game was made in a 2 days hackathon competition in Department of Information Management at National Sun Yat-sun University.<br><br>
+			<h5>Overview</h5>
+				<p>This Unity 2-Dimentional game was made in a 2 days hackathon in Department of Information Management at National Sun Yat-sun University.<br><br>
 				</p>
 			</div>
 			<div class="col-two">
 				<img src="game_nsysuhero/nsysuhero.svg" alt="" class="img-col-two">
 			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-one">
-				<p>
-				NSYSU HERO is based on the geographical background of National Sun Yat-sun University. There are a lot of monkeys on the mountainous campus, and since sometimes the monkeys can be pretty aggressive, campus safeguards would use airgun to scareoff the monkeys preventing them from attacking students, and bring the monkeys back to their home to protect them. This game use easy keyboard control the character to interact.
-				</p>
-			</div>
-		</div>
-
-		<div class="row-project" data-aos="slide-up" data-aos-once="true">
 			<div class="col-two">
 			<h5>Role</h5>
 			<p>I am the graphic designer in a team of 3 people. I designed elements including the objects, and background in the game scenes.</p>
@@ -72,25 +62,68 @@
 				<p>Adobe Illustrator<br>Adobe Photoshop<br>Unity</p>
 			</div>
 		</div>
-		
-		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
-			<div class="col-one">
-				<h5>Game Scenes</h5>
-				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>01 - Home Page</h6>
-				<p>It is where letting user to choose between seeing the instruction page or starting the games.</p>
-				
-				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>02 - Instruction Page</h6>
-				<p>It explains the rules about how to play this game.</p>
 
-				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>03 - Game Scene</h6>
-				<p>The main page for the game. The donut indicates the life of the character.
-				It explains the rules about how to play this game.</p>
+		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
+			<div class="col-one"><h5>Story</h5></div>
+			<div class="col-two">				
+				<img src="game_nsysuhero/monkey.jpg" alt="monkey" class="img-col-two">
+			</div>
+			<div class="col-two">
+				<p>
+				NSYSU HERO is based on the geographical background of my university, National Sun Yat-sun University.<br> <br>
+				Soma part of the mountainous campus are the natural habitat of <b>Formosan macaque</b>, a protected species in Taiwan.<br><br>
+				However, sometimes the macaques can be pretty aggressive and attack students. Thus, campus safeguards use airgun to scare off the monkeys preventing them from attacking human, and then bring them back to their home to protect them.<br><br>
+				We created NSYSU HERO as a little game to practice the skills of using Unity and designing user interface of games.
+				</p>
 			</div>
 		</div>
-		<div class="row-project" data-aos="slide-up" data-aos-once="true" >
+		
+		<div class="row-full">
+			<div class="col-one"><h5>Game Scenes</h5></div>
+			<div class="col-gif">
+				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-two" alt="nsysuhero1" data-aos="fade-right" data-aos-once="true">
+			</div>
+			<div class="col-three">
+				<h6>1 - Home Page</h6>
+				<p>The home page let user to go to two pages.<br><mark>How to play</mark> takes user to the game instruction page, and the <mark>Start</mark> will start a new game.</p>
+			</div>
+		</div>
+		
+
+		<div class="row-full">
+			<div class="col-gif">
+				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one" alt="nsysuhero_instruc" data-aos="fade-right" data-aos-once="true">
+			</div>
+			<div class="col-three">
+				<h6>2 - Instruction Page</h6>
+				<p>The instruction page use photos and text to explain the controls and rules about how to play this game.<br>The <mark>back</mark> button take user back to the home page.</p>
+			</div>
+		</div>
+
+
+		<div class="row-full">
+			<div class="col-gif">
+				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one"alt="" data-aos="fade-right" data-aos-once="true" >
+			</div>
+			<div class="col-three">
+				<h6>03 - Game Scene</h6>
+				<p>This is the main page for the game.<br>The character should avoid bumping to the bus and have to jump on to the building.<br>The <mark>Donut</mark> indicates the life of the character.<br>The <mark>Score</mark> indicates the current score of this game.<br>The <mark>End</mark> indicates end this game and show the result.<br></p>
+			</div>
+		</div>
+		
+		<div class="row-project row-project-color">
+			<h5>Live Demo</h5>
+			<video controls>
+				<source src="game_nsysuhero/demo.m4v" type="video/mp4">
+				Your browser does not support the video tag. Please change another browser
+			</video>
+		</div>
+		
+		<div class="row-project">
+			<h5>Conclusion</h5>
+			<p>I really enjoyed drawing the game scenes and UI elements for this game. I also learned how to communicated with game developer in a gaming project. I not only practiced team work skills, but also practiced my design skills in this project.</p>
+		</div>
+<!-- 		<div class="row-project" data-aos="slide-up" data-aos-once="true" >
 			<div class="col-one">
 				<h5>UI Elements</h5>
 
@@ -102,7 +135,7 @@
 			<div class="col-two">
 				<img src="game_nsysuhero/gamescene-3-2.png" class="img-col-two" alt="">
 			</div>
-		</div>
+		</div> -->
 
 		<a href="designdiary.html">
 			<div class="seemore">
